--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
