--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "next": "14.2.20",
     "next-cloudinary": "^6.16.0",
+    "npm": "^11.0.0",
     "qs": "^6.13.1",
     "react": "^18",
     "react-dom": "^18",
